<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context=".PlaceYourOrderActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pickup"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/switchDelivery"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />


        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchDelivery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/Switch"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.529"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/delivery"
            android:textColor="@color/purple_700"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.056"
            app:layout_constraintStart_toEndOf="@+id/switchDelivery"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/inputName"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="05dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="05dp"
            android:autofillHints="name"
            android:hint="@string/enter_your_name"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/switchDelivery" />

        <EditText
            android:id="@+id/inputAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="05dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="05dp"
            android:autofillHints="postalAddress"
            android:hint="@string/enter_your_address"
            android:inputType="textPostalAddress"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputName" />

        <EditText
            android:id="@+id/inputCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="05dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="05dp"
            android:autofillHints="postalAddress"
            android:hint="@string/enter_your_city"
            android:inputType="text"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputAddress" />

        <EditText
            android:id="@+id/inputState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="05dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="05dp"
            android:autofillHints="name"
            android:hint="@string/enter_your_state"
            android:inputType="text"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputCity" />

        <EditText
            android:id="@+id/inputZip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="05dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="05dp"
            android:autofillHints="postalCode"
            android:hint="@string/enter_your_zip"
            android:inputType="number"
            android:maxLength="5"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputState" />

        <TextView
            android:id="@+id/tvCardDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/card_details"
            android:textColor="@color/purple_500"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputZip" />

        <EditText
            android:id="@+id/inputCardNumber"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="05dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="05dp"
            android:autofillHints="creditCardNumber"
            android:hint="@string/enter_card_number"
            android:inputType="number"
            android:maxLength="16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCardDetails" />

        <EditText
            android:id="@+id/inputCardExpiry"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="05dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="05dp"
            android:autofillHints="creditCardExpirationMonth|creditCardExpirationYear"
            android:hint="@string/enter_card_expiry_mm_yyyy"
            android:inputType="number"
            android:maxLength="6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputCardNumber" />

        <EditText
            android:id="@+id/inputCardPin"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="05dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="05dp"
            android:autofillHints="password"
            android:hint="@string/enter_card_pin_3_digits"
            android:inputType="numberPassword"
            android:maxLength="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputCardExpiry" />


        <TextView
            android:id="@+id/tvTotalItems"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/total_items_in_cart"
            android:textColor="@color/purple_500"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputCardPin" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cartItemsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTotalItems" />

        <TextView
            android:id="@+id/tvSubtotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/sub_total"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cartItemsRecyclerView" />

        <TextView
            android:id="@+id/tvSubtotalAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/zero"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cartItemsRecyclerView" />

        <TextView
            android:id="@+id/tvDeliveryCharge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/delivery_charge"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSubtotal" />

        <TextView
            android:id="@+id/tvDeliveryChargeAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/zero"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSubtotal" />

        <TextView
            android:id="@+id/tvTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/total"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDeliveryCharge" />

        <TextView
            android:id="@+id/tvTotalAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/zero"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDeliveryCharge" />

        <TextView
            android:id="@+id/buttonPlaceYourOrder"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/button_bg"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/place_your_order"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTotal" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>